--- a/Host/appsettings.Development.json
+++ b/Host/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=ep-sweet-snowflake-219410.eu-central-1.aws.neon.tech;Database=neondb;Username=sashasam348;Password=WZ1xU0ecjQDF"
   }
 }
