--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.5" />
+      <Folder Include="Controllers" />
     </ItemGroup>
 
 </Project>
