Added validation on fieldNames to nested objects

--- a/Host/appsettings.Development.json
+++ b/Host/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=ep-sweet-snowflake-219410.eu-central-1.aws.neon.tech;Database=neondb;Username=sashasam348;Password=WZ1xU0ecjQDF"
+    "DefaultConnection": "Server=127.0.0.1;Port=5432;Userid=postgres;Password=sadmin;Pooling=false;MinPoolSize=1;MaxPoolSize=20;Timeout=15;SslMode=Disable;Database=gibbon-api"
   }
 }
