--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
       <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="7.22.2" />
     </ItemGroup>
 
