--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Application\Application.csproj" />
       <ProjectReference Include="..\Core\Core.csproj" />
     </ItemGroup>
 
