--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="LanguageExt.Core" Version="4.4.3" />
+      <PackageReference Include="FluentResults" Version="3.15.2" />
       <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="7.0.5" />
       <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.5" />
     </ItemGroup>
