--- a/Host/Dockerfile
+++ b/Host/Dockerfile
@@ -1,26 +1,23 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+# Use the official Microsoft .NET image.
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
+# Build the application.
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Host/Host.csproj", "Host/"]
-COPY ["Application/Application.csproj", "Application/"]
-COPY ["Core/Core.csproj", "Core/"]
-COPY ["DataAccess/DataAccess.csproj", "DataAccess/"]
-COPY ["IdentityServer/IdentityServer.csproj", "IdentityServer/"]
-COPY ["WebApi/WebApi.csproj", "WebApi/"]
 RUN dotnet restore "Host/Host.csproj"
 COPY . .
 WORKDIR "/src/Host"
-RUN dotnet build "Host.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "Host.csproj" -c Release -o /app/build
 
+# Publish the application.
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "Host.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Host.csproj" -c Release -o /app/publish
 
+# Final stage/image.
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
