--- a/Host/Dockerfile
+++ b/Host/Dockerfile
@@ -13,12 +13,13 @@ COPY . .
 WORKDIR "/src/Host"
 RUN dotnet build "Host.csproj" -c Release -o /app/build
 
-# Publish the application.
+# Publish the application to a specific subdirectory.
 FROM build AS publish
-RUN dotnet publish "Host.csproj" -c Release -o /app/publish
+RUN dotnet publish "Host.csproj" -c Release -o /app/publish/host
 
 # Final stage/image.
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+# Ensure to copy from the specific subdirectory.
+COPY --from=publish /app/publish/host .
 ENTRYPOINT ["dotnet", "Host.dll"]
