--- a/Host/appsettings.Development.json
+++ b/Host/appsettings.Development.json
@@ -7,5 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=ep-sweet-snowflake-219410.eu-central-1.aws.neon.tech;Database=neondb;Username=sashasam348;Password=WZ1xU0ecjQDF"
-  }
+  },
+  "AllowedOrigins": "http://localhost:4200, https://localhost:5001, http://localhost:5283",
+  "AuthAuthority": "https://localhost:7030"
 }
