--- a/IdentityServer/Dockerfile
+++ b/IdentityServer/Dockerfile
@@ -2,22 +2,24 @@
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
+EXPOSE $PORT
 
+# Build the application
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["IdentityServer/IdentityServer.csproj", "IdentityServer/"]
-COPY ["DataAccess/DataAccess.csproj", "DataAccess/"]
-COPY ["Core/Core.csproj", "Core/"]
 RUN dotnet restore "IdentityServer/IdentityServer.csproj"
+# Copy the whole source except appsettings files
 COPY . .
+RUN rm -f IdentityServer/appsettings*.json  # Removing appsettings files from the build context
 WORKDIR "/src/IdentityServer"
-RUN dotnet build "IdentityServer.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "IdentityServer.csproj" -c Release -o /app/build
 
+# Publish the application
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "IdentityServer.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "IdentityServer.csproj" -c Release -o /app/publish
 
+# Final stage/image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
