--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1;Port=5432;Userid=postgres;Password=sadmin;Pooling=false;MinPoolSize=1;MaxPoolSize=20;Timeout=15;SslMode=Disable;Database=gibbon-api"
-  }
+  },
+  "AllowedOrigins": "http://localhost:4200, https://localhost:5001, http://localhost:5283"
 }
