--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,26 +36,39 @@ jobs:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
       run: heroku container:login
 
-    # - name: Build and Push IdentityServer Docker Image
-    #   env:
-    #     HEROKU_APP_NAME: your-identityserver-app-name
-    #   run: |
-    #     docker build -t registry.heroku.com/${HEROKU_APP_NAME}/web -f IdentityServer/Dockerfile .
-    #     docker push registry.heroku.com/${HEROKU_APP_NAME}/web
+    - name: Build and Push IdentityServer Docker Image
+      env:
+        HEROKU_APP_NAME: gibbon-api-auth
+        ConnectionStrings__DefaultConnection: ${{ secrets.CONNECTIONSTRINGS__DEFAULTCONNECTION }}
+        AUTHAUTHORITY: ${{ env.AUTHAUTHORITY }}
+        ALLOWEDORIGINS: ${{ env.ALLOWEDORIGINS }}
+      run: |
+        docker build -t registry.heroku.com/${HEROKU_APP_NAME}/web -f IdentityServer/Dockerfile \
+          --build-arg ConnectionStrings__DefaultConnection=${ConnectionStrings__DefaultConnection} \
+          --build-arg AuthAuthority=${AUTHAUTHORITY} \
+          --build-arg AllowedOrigins=${ALLOWEDORIGINS} \
+          .
+        docker push registry.heroku.com/${HEROKU_APP_NAME}/web
 
     - name: Build and Push Host Docker Image
       env:
         HEROKU_APP_NAME: gibbon-api
         ConnectionStrings__DefaultConnection: ${{ secrets.CONNECTIONSTRINGS__DEFAULTCONNECTION }}
+        AUTHAUTHORITY: ${{ env.AUTHAUTHORITY }}
+        ALLOWEDORIGINS: ${{ env.ALLOWEDORIGINS }}
       run: |
-        docker build -t registry.heroku.com/${HEROKU_APP_NAME}/web -f Host/Dockerfile --build-arg ConnectionStrings__DefaultConnection=${ConnectionStrings__DefaultConnection} .
+        docker build -t registry.heroku.com/${HEROKU_APP_NAME}/web -f Host/Dockerfile \
+          --build-arg ConnectionStrings__DefaultConnection=${ConnectionStrings__DefaultConnection}  \
+          --build-arg AuthAuthority=${AUTHAUTHORITY} \
+          --build-arg AllowedOrigins=${ALLOWEDORIGINS} \
+          .
         docker push registry.heroku.com/${HEROKU_APP_NAME}/web
 
-    # - name: Release IdentityServer Docker Image
-    #   env:
-    #     HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-    #     HEROKU_APP_NAME: your-identityserver-app-name
-    #   run: heroku container:release web --app ${HEROKU_APP_NAME}
+    - name: Release IdentityServer Docker Image
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+        HEROKU_APP_NAME: gibbon-api-auth
+      run: heroku container:release web --app ${HEROKU_APP_NAME}
 
     - name: Release Host Docker Image
       env:
